--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,6 +7,10 @@
 # documentation.
 
 name: Java CI with Maven
+permissions:
+  contents: write
+  security-events: write
+
 on:
   push:
     branches: [ "main" ]
